2016-02-18         Arnold D. Robbins     <arnold@skeeve.com>

	* profile2.ok, profile5.ok: Adjust after code changes.

2016-01-14         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (aryprm9): New test.
	* aryprm9.awk, aryprm9.ok: New files.

	Unrelated:

	* ChangeLog: Remove spurious whitespace.

2015-12-27         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (profile8): New test.
	* profile8.awk, profile8.ok: New files.

2015-11-24         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (watchpoint1): New test.
	* watchpoint1.awk, watchpoint1.in, watchpoint1.ok,
	watchpoint1.script: New files.

2015-10-28         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (nulinsrc): New test.
	* nulinsrc.awk, nulinsrc.ok: New files.

2015-10-26         Arnold D. Robbins     <arnold@skeeve.com>

	* id.awk: Sort the output. Helps on z/OS.
	* id.ok: Adjust.

2015-10-11         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (readbuf): New test.
	* readbuf.awk, readbuf.ok: New files.

2015-09-26         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (muldimposix): New test.
	* muldimposix.awk, muldimposix.ok: New files.

2015-09-18         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (fpat5): New test.
	* fpat5.awk, fpat5.in, fpat5.ok: New files.

2015-09-04         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.ok: Updated after code change.

2015-08-28	Daniel Richard G.	<skunk@iSKUNK.ORG>

	* Makefile.am: Generate the Maketests file without
	reference to its directory, because putting it directly into
	srcdir can be problematic (e.g. srcdir could be read-only).
	(clean-local): Renamed from "clean", as Automake already defines
	"clean" and warns us as much.

2015-08-25         Arnold D. Robbins     <arnold@skeeve.com>

	* mbstr1.ok: Updated after code change.
	* Makefile.am (mbstr2): New test.
	* mbstr2.awk, mbstr2.in, mbstr2.ok: New files.
