@@ -1,0 +1,5 @@
+{
+	cmd = "cat - 1>&2; sleep 2"
+	print |& cmd; close(cmd, "to")
+	print |& cmd; print ERRNO
+}
