@@ -1,0 +1,3 @@
+gawk: clos1way2.awk:4: (FILENAME=- FNR=1) fatal: print: attempt to write to closed write end of two-way pipe
+test
+CODE: 2
