@@ -1,0 +1,3 @@
+gawk: clos1way4.awk:5: fatal: printf: attempt to write to closed write end of two-way pipe
+test1
+ODE: 2
