@@ -1,0 +1,3 @@
+test1
+gawk: clos1way5.awk:6: fatal: getline: attempt to read from closed read end of two-way pipe
+EXIT CODE: 2
