@@ -1,3 +1,11 @@
+2016-04-04         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (clos1way2, clos1way3, clos1way4, clos1way5):
+	New tests.
+	* clos1way2.awk, clos1way2.in, clos1way2.ok, clos1way3.awk,
+	clos1way3.ok, clos1way4.awk, clos1way4.ok, clos1way5.awk,
+	clos1way5.ok: New files.
+
 2016-02-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* profile2.ok, profile5.ok: Adjust after code changes.
